appfunctions/appfunctions-compiler/src/test/test-data/input/signatures/invalid/NoMethodsInterface.KT
package com.test

import androidx.appfunctions.AppFunctionSignature
import androidx.appfunctions.metadata.AppFunctionMetadata

@AppFunctionSignature(
    scope = AppFunctionMetadata.SCOPE_GLOBAL,
    appFunctionXmlFileName = "app_level_app_functions",
)
interface NoMethodsInterface {}
